[package]
name = "ws_action_server"
version = "0.1.0"
authors = ["Yuri Titov <yuri@parsesoftware.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
json_action = { git = "https://github.com/ytitov/json_action.git", tag = "0.0.1.alpha" }
ws = { git = "https://github.com/housleyjk/ws-rs.git", branch = "stable" }
lazy_static = "1.3"
tokio = "0.1"
futures = "0.1"
bytes = "0.4.11"
byteorder = "1.0"
